--- a/CSS/02_CSS/add 1/index4.html
+++ b/CSS/02_CSS/add 1/index4.html
@@ -5,12 +5,13 @@
     <title>Document</title>
     <style>
         div {
-            border-style: solid; border-width: 2,5em;
-            width: 80%;
-            border-image-source: url("img/ramka.png");
-            border-image-slice: 100;
-            border-image-repeat: stretch;
-            border-image-width: 2;
+            border-style:solid; 
+            border-width: 2.5em;  
+            width:80%;
+    		border-image-source: url('img/ramka.png');
+    		border-image-slice: 100;
+    		border-image-repeat: stretch; 
+    		border-image-width: 2;
         }
     </style>
 </head>
